# CodenamesBot

./: .gitignore  API_DOCUMENTATION.md  FRONTEND_SETUP.md  README.md  database.py  main.py  pyproject.toml  requirements.txt  stats_formatter.py  views.py
api-server/: .env.example  README.md  database.py  main.py  requirements.txt
discord-bot/: .env.example  README.md  bot.py  main.py  prompts.py  requirements.txt  stats_formatter.py  views.py
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/: CustomQuery.vue  GameLog.vue  PlayerLeaderboard.vue  TeamLeaderboard.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts
frontend/src/views/: AdminView.vue  GamesView.vue  HomeView.vue  PlayersView.vue  QueryView.vue
