[project]
name = "codenamesbot"
version = "1.0.0"
description = "Codenames statistics tracking system with Discord bot, API server, and web frontend"
requires-python = ">=3.14"
readme = "README.md"

# Note: This project is split into multiple services.
# Each service has its own requirements.txt:
# - discord-bot/requirements.txt
# - api-server/requirements.txt
# - frontend/ (to be implemented)
#
# To install all dependencies for development:
# pip install -r discord-bot/requirements.txt
# pip install -r api-server/requirements.txt
